fix: Conflicting transaction color in dark mode

--- a/src/components/transactions/GroupedTxListItems/styles.module.css
+++ b/src/components/transactions/GroupedTxListItems/styles.module.css
@@ -15,7 +15,6 @@
 
 .disclaimerContainer {
   background-color: var(--color-warning-background);
-  color: var(--color-static-main);
   padding: var(--space-1) var(--space-2);
   border-radius: var(--space-1);
   flex: 1;
